src/workers/fmfile/fmfile/FMFpythonParser.py
# $ANTLR 3.0.1 FMFpython.g 2008-06-20 16:54:27

from antlr3 import *
from antlr3.compat import set, frozenset

from antlr3.tree import *



# for convenience in actions
HIDDEN = BaseRecognizer.HIDDEN

# token types
PUNCTUATION=62
DOLLAR=45
EXPONENT=51
LBRACK=28
RWORD=60
ESC=54
DIGITS=49
DATA_SECTION=8
FLOAT=57
EQUALS=34
EOF=-1
LPAREN=30
ASTERISK=32
QUANTITY=19
DATASET=11
WORD=61
LONGNAME=23
HAT=43
TIME=15
RPAREN=31
COMMON_SECTION=6
IDENTIFIER=18
DEPS=24
PLUS=35
BODY=9
DIGIT=37
HEADER=5
COMMENT=27
GREATERTHAN=48
RBRACK=29
LESSTHAN=47
ITEM=10
ISODATE=56
KEY=12
DATETIME=13
NUMBER=16
LITERAL=63
LCURLY=40
UNDERSCORE=42
INT=58
LETTERS=50
MINUS=38
PERCENTAGE=46
IINT=53
GERMANDATE=55
COLON=33
NMINUS=39
CONFIG=4
UNIT=20
WS=26
VARIABLE=17
NEWLINE=25
FFLOAT=52
NPLUS=36
RCURLY=41
DATADEF_SECTION=7
DIV=44
COLSPEC=22
DATE=14
STRING=21
IMAG=59

# token names
tokenNames = [
    "<invalid>", "<EOR>", "<DOWN>", "<UP>", 
    "CONFIG", "HEADER", "COMMON_SECTION", "DATADEF_SECTION", "DATA_SECTION", 
    "BODY", "ITEM", "DATASET", "KEY", "DATETIME", "DATE", "TIME", "NUMBER", 
    "VARIABLE", "IDENTIFIER", "QUANTITY", "UNIT", "STRING", "COLSPEC", "LONGNAME", 
    "DEPS", "NEWLINE", "WS", "COMMENT", "LBRACK", "RBRACK", "LPAREN", "RPAREN", 
    "ASTERISK", "COLON", "EQUALS", "PLUS", "NPLUS", "DIGIT", "MINUS", "NMINUS", 
    "LCURLY", "RCURLY", "UNDERSCORE", "HAT", "DIV", "DOLLAR", "PERCENTAGE", 
    "LESSTHAN", "GREATERTHAN", "DIGITS", "LETTERS", "EXPONENT", "FFLOAT", 
    "IINT", "ESC", "GERMANDATE", "ISODATE", "FLOAT", "INT", "IMAG", "RWORD", 
    "WORD", "PUNCTUATION", "LITERAL", "'reference'", "'data definitions'", 
    "'data'", "','"
]



class FMFpythonParser(Parser):
    grammarFileName = "FMFpython.g"
    tokenNames = tokenNames

    def __init__(self, input):
        Parser.__init__(self, input)
        self.ruleMemo = {}



                
        self.adaptor = CommonTreeAdaptor()




    class config_return(object):
        def __init__(self):
            self.start = None
            self.stop = None

            self.tree = None


    # $ANTLR start config
    # FMFpython.g:122:1: config : referenceSection ( commonSection )* datadefSection dataSection -> ^( CONFIG referenceSection ( commonSection )* datadefSection dataSection ) ;
    def config(self, ):

        retval = self.config_return()
        retval.start = self.input.LT(1)

        root_0 = None

        referenceSection1 = None

        commonSection2 = None

        datadefSection3 = None

        dataSection4 = None


        stream_commonSection = RewriteRuleSubtreeStream(self.adaptor, "rule commonSection")
        stream_datadefSection = RewriteRuleSubtreeStream(self.adaptor, "rule datadefSection")
        stream_referenceSection = RewriteRuleSubtreeStream(self.adaptor, "rule referenceSection")
        stream_dataSection = RewriteRuleSubtreeStream(self.adaptor, "rule dataSection")
        try:
            try:
                # FMFpython.g:123:9: ( referenceSection ( commonSection )* datadefSection dataSection -> ^( CONFIG referenceSection ( commonSection )* datadefSection dataSection ) )
                # FMFpython.g:123:11: referenceSection ( commonSection )* datadefSection dataSection
                self.following.append(self.FOLLOW_referenceSection_in_config1261)
                referenceSection1 = self.referenceSection()
                self.following.pop()
                if self.failed:
                    return retval
                if self.backtracking == 0:
                    stream_referenceSection.add(referenceSection1.tree)
                # FMFpython.g:123:28: ( commonSection )*
                while True: #loop1
                    alt1 = 2
                    LA1_0 = self.input.LA(1)

                    if (LA1_0 == LBRACK) :
                        LA1_1 = self.input.LA(2)

                        if ((CONFIG <= LA1_1 <= RPAREN) or (COLON <= LA1_1 <= 67)) :
                            alt1 = 1




                    if alt1 == 1:
                        # FMFpython.g:123:28: commonSection
                        self.following.append(self.FOLLOW_commonSection_in_config1263)
                        commonSection2 = self.commonSection()
                        self.following.pop()
                        if self.failed:
                            return retval
                        if self.backtracking == 0:
                            stream_commonSection.add(commonSection2.tree)


                    else:
                        break #loop1


                self.following.append(self.FOLLOW_datadefSection_in_config1266)
                datadefSection3 = self.datadefSection()
                self.following.pop()
                if self.failed:
                    return retval
                if self.backtracking == 0:
                    stream_datadefSection.add(datadefSection3.tree)
                self.following.append(self.FOLLOW_dataSection_in_config1268)
                dataSection4 = self.dataSection()
                self.following.pop()
                if self.failed:
                    return retval
                if self.backtracking == 0:
                    stream_dataSection.add(dataSection4.tree)
                # AST Rewrite
                # elements: commonSection, datadefSection, referenceSection, dataSection
                # token labels: 
                # rule labels: retval
                # token list labels: 
                # rule list labels: 
                if self.backtracking == 0:

                    retval.tree = root_0

                    if retval is not None:
                        stream_retval = RewriteRuleSubtreeStream(self.adaptor, "token retval", retval.tree)
                    else:
                        stream_retval = RewriteRuleSubtreeStream(self.adaptor, "token retval", None)


                    root_0 = self.adaptor.nil()
                    # 124:9: -> ^( CONFIG referenceSection ( commonSection )* datadefSection dataSection )
                    # FMFpython.g:124:12: ^( CONFIG referenceSection ( commonSection )* datadefSection dataSection )
                    root_1 = self.adaptor.nil()
                    root_1 = self.adaptor.becomeRoot(self.adaptor.createFromType(CONFIG, "CONFIG"), root_1)

                    self.adaptor.addChild(root_1, stream_referenceSection.next())
                    # FMFpython.g:124:38: ( commonSection )*
                    while stream_commonSection.hasNext():
                        self.adaptor.addChild(root_1, stream_commonSection.next())


                    stream_commonSection.reset();
                    self.adaptor.addChild(root_1, stream_datadefSection.next())
                    self.adaptor.addChild(root_1, stream_dataSection.next())

                    self.adaptor.addChild(root_0, root_1)






                retval.stop = self.input.LT(-1)

                if self.backtracking == 0:

                    retval.tree = self.adaptor.rulePostProcessing(root_0)
                    self.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)

            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return retval

    # $ANTLR end config

    class referenceSection_return(object):
        def __init__(self):
            self.start = None
            self.stop = None

            self.tree = None


    # $ANTLR start referenceSection
    # FMFpython.g:127:1: referenceSection : LBRACK ASTERISK 'reference' RBRACK NEWLINE ( commonitem )+ -> ^( COMMON_SECTION ^( HEADER ASTERISK 'reference' ) ^( BODY ( commonitem )+ ) ) ;
    def referenceSection(self, ):

        retval = self.referenceSection_return()
        retval.start = self.input.LT(1)

        root_0 = None

        LBRACK5 = None
        ASTERISK6 = None
        string_literal7 = None
        RBRACK8 = None
        NEWLINE9 = None
        commonitem10 = None


        LBRACK5_tree = None
        ASTERISK6_tree = None
        string_literal7_tree = None
        RBRACK8_tree = None
        NEWLINE9_tree = None
        stream_RBRACK = RewriteRuleTokenStream(self.adaptor, "token RBRACK")
        stream_LBRACK = RewriteRuleTokenStream(self.adaptor, "token LBRACK")
        stream_NEWLINE = RewriteRuleTokenStream(self.adaptor, "token NEWLINE")
        stream_64 = RewriteRuleTokenStream(self.adaptor, "token 64")
        stream_ASTERISK = RewriteRuleTokenStream(self.adaptor, "token ASTERISK")
        stream_commonitem = RewriteRuleSubtreeStream(self.adaptor, "rule commonitem")
        try:
            try:
                # FMFpython.g:128:9: ( LBRACK ASTERISK 'reference' RBRACK NEWLINE ( commonitem )+ -> ^( COMMON_SECTION ^( HEADER ASTERISK 'reference' ) ^( BODY ( commonitem )+ ) ) )
                # FMFpython.g:128:11: LBRACK ASTERISK 'reference' RBRACK NEWLINE ( commonitem )+
                LBRACK5 = self.input.LT(1)
                self.match(self.input, LBRACK, self.FOLLOW_LBRACK_in_referenceSection1316)
                if self.failed:
                    return retval
                if self.backtracking == 0:
                    stream_LBRACK.add(LBRACK5)
                ASTERISK6 = self.input.LT(1)
                self.match(self.input, ASTERISK, self.FOLLOW_ASTERISK_in_referenceSection1318)
                if self.failed:
                    return retval
                if self.backtracking == 0:
                    stream_ASTERISK.add(ASTERISK6)
                string_literal7 = self.input.LT(1)
                self.match(self.input, 64, self.FOLLOW_64_in_referenceSection1320)
                if self.failed:
                    return retval
                if self.backtracking == 0:
                    stream_64.add(string_literal7)
                RBRACK8 = self.input.LT(1)
                self.match(self.input, RBRACK, self.FOLLOW_RBRACK_in_referenceSection1322)
                if self.failed:
                    return retval
                if self.backtracking == 0:
                    stream_RBRACK.add(RBRACK8)
                NEWLINE9 = self.input.LT(1)
                self.match(self.input, NEWLINE, self.FOLLOW_NEWLINE_in_referenceSection1324)
                if self.failed:
                    return retval
                if self.backtracking == 0:
                    stream_NEWLINE.add(NEWLINE9)
                # FMFpython.g:128:54: ( commonitem )+
                cnt2 = 0
                while True: #loop2
                    alt2 = 2
                    LA2_0 = self.input.LA(1)

                    if ((CONFIG <= LA2_0 <= COMMENT) or (RBRACK <= LA2_0 <= 67)) :
                        alt2 = 1


                    if alt2 == 1:
                        # FMFpython.g:128:54: commonitem
                        self.following.append(self.FOLLOW_commonitem_in_referenceSection1326)
                        commonitem10 = self.commonitem()
                        self.following.pop()
                        if self.failed:
                            return retval
                        if self.backtracking == 0:
                            stream_commonitem.add(commonitem10.tree)


                    else:
                        if cnt2 >= 1:
                            break #loop2

                        if self.backtracking > 0:
                            self.failed = True
                            return retval

                        eee = EarlyExitException(2, self.input)
                        raise eee

                    cnt2 += 1


                # AST Rewrite
                # elements: commonitem, 64, ASTERISK
                # token labels: 
                # rule labels: retval
                # token list labels: 
                # rule list labels: 
                if self.backtracking == 0:

                    retval.tree = root_0

                    if retval is not None:
                        stream_retval = RewriteRuleSubtreeStream(self.adaptor, "token retval", retval.tree)
                    else:
                        stream_retval = RewriteRuleSubtreeStream(self.adaptor, "token retval", None)


                    root_0 = self.adaptor.nil()
                    # 129:9: -> ^( COMMON_SECTION ^( HEADER ASTERISK 'reference' ) ^( BODY ( commonitem )+ ) )
                    # FMFpython.g:129:12: ^( COMMON_SECTION ^( HEADER ASTERISK 'reference' ) ^( BODY ( commonitem )+ ) )
                    root_1 = self.adaptor.nil()
                    root_1 = self.adaptor.becomeRoot(self.adaptor.createFromType(COMMON_SECTION, "COMMON_SECTION"), root_1)

                    # FMFpython.g:129:29: ^( HEADER ASTERISK 'reference' )
                    root_2 = self.adaptor.nil()
                    root_2 = self.adaptor.becomeRoot(self.adaptor.createFromType(HEADER, "HEADER"), root_2)

                    self.adaptor.addChild(root_2, stream_ASTERISK.next())
                    self.adaptor.addChild(root_2, stream_64.next())

                    self.adaptor.addChild(root_1, root_2)
                    # FMFpython.g:129:60: ^( BODY ( commonitem )+ )
                    root_2 = self.adaptor.nil()
                    root_2 = self.adaptor.becomeRoot(self.adaptor.createFromType(BODY, "BODY"), root_2)

                    # FMFpython.g:129:67: ( commonitem )+
                    if not (stream_commonitem.hasNext()):
                        raise RewriteEarlyExitException()

                    while stream_commonitem.hasNext():
                        self.adaptor.addChild(root_2, stream_commonitem.next())


                    stream_commonitem.reset()

                    self.adaptor.addChild(root_1, root_2)

                    self.adaptor.addChild(root_0, root_1)






                retval.stop = self.input.LT(-1)

                if self.backtracking == 0:

                    retval.tree = self.adaptor.rulePostProcessing(root_0)
                    self.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)

            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return retval

    # $ANTLR end referenceSection

    class datadefSection_return(object):
        def __init__(self):
            self.start = None
            self.stop = None

            self.tree = None


    # $ANTLR start datadefSection
    # FMFpython.g:131:1: datadefSection : LBRACK ASTERISK 'data definitions' RBRACK NEWLINE ( colitem )+ -> ^( DATADEF_SECTION ^( HEADER ASTERISK 'data definitions' ) ^( BODY ( colitem )+ ) ) ;
    def datadefSection(self, ):

        retval = self.datadefSection_return()
        retval.start = self.input.LT(1)

        root_0 = None

        LBRACK11 = None
        ASTERISK12 = None
        string_literal13 = None
        RBRACK14 = None
        NEWLINE15 = None
        colitem16 = None


        LBRACK11_tree = None
        ASTERISK12_tree = None
        string_literal13_tree = None
        RBRACK14_tree = None
        NEWLINE15_tree = None
        stream_RBRACK = RewriteRuleTokenStream(self.adaptor, "token RBRACK")
        stream_LBRACK = RewriteRuleTokenStream(self.adaptor, "token LBRACK")
        stream_NEWLINE = RewriteRuleTokenStream(self.adaptor, "token NEWLINE")
        stream_65 = RewriteRuleTokenStream(self.adaptor, "token 65")
        stream_ASTERISK = RewriteRuleTokenStream(self.adaptor, "token ASTERISK")
        stream_colitem = RewriteRuleSubtreeStream(self.adaptor, "rule colitem")
        try:
            try:
                # FMFpython.g:132:9: ( LBRACK ASTERISK 'data definitions' RBRACK NEWLINE ( colitem )+ -> ^( DATADEF_SECTION ^( HEADER ASTERISK 'data definitions' ) ^( BODY ( colitem )+ ) ) )
                # FMFpython.g:132:11: LBRACK ASTERISK 'data definitions' RBRACK NEWLINE ( colitem )+
                LBRACK11 = self.input.LT(1)
                self.match(self.input, LBRACK, self.FOLLOW_LBRACK_in_datadefSection1372)
                if self.failed:
                    return retval
                if self.backtracking == 0:
                    stream_LBRACK.add(LBRACK11)
                ASTERISK12 = self.input.LT(1)
                self.match(self.input, ASTERISK, self.FOLLOW_ASTERISK_in_datadefSection1374)
                if self.failed:
                    return retval
                if self.backtracking == 0:
                    stream_ASTERISK.add(ASTERISK12)
                string_literal13 = self.input.LT(1)
                self.match(self.input, 65, self.FOLLOW_65_in_datadefSection1376)
                if self.failed:
                    return retval
                if self.backtracking == 0:
                    stream_65.add(string_literal13)
                RBRACK14 = self.input.LT(1)
                self.match(self.input, RBRACK, self.FOLLOW_RBRACK_in_datadefSection1378)
                if self.failed:
                    return retval
                if self.backtracking == 0:
                    stream_RBRACK.add(RBRACK14)
                NEWLINE15 = self.input.LT(1)
                self.match(self.input, NEWLINE, self.FOLLOW_NEWLINE_in_datadefSection1380)
                if self.failed:
                    return retval
                if self.backtracking == 0:
                    stream_NEWLINE.add(NEWLINE15)
                # FMFpython.g:132:61: ( colitem )+
                cnt3 = 0
                while True: #loop3
                    alt3 = 2
                    LA3_0 = self.input.LA(1)

                    if ((CONFIG <= LA3_0 <= COMMENT) or (RBRACK <= LA3_0 <= 67)) :
                        alt3 = 1


                    if alt3 == 1:
                        # FMFpython.g:132:61: colitem
                        self.following.append(self.FOLLOW_colitem_in_datadefSection1382)
                        colitem16 = self.colitem()
                        self.following.pop()
                        if self.failed:
                            return retval
                        if self.backtracking == 0:
                            stream_colitem.add(colitem16.tree)


                    else:
                        if cnt3 >= 1:
                            break #loop3

                        if self.backtracking > 0:
                            self.failed = True
                            return retval

                        eee = EarlyExitException(3, self.input)
                        raise eee

                    cnt3 += 1


                # AST Rewrite
                # elements: ASTERISK, colitem, 65
                # token labels: 
                # rule labels: retval
                # token list labels: 
                # rule list labels: 
                if self.backtracking == 0:

                    retval.tree = root_0

                    if retval is not None:
                        stream_retval = RewriteRuleSubtreeStream(self.adaptor, "token retval", retval.tree)
                    else:
                        stream_retval = RewriteRuleSubtreeStream(self.adaptor, "token retval", None)


                    root_0 = self.adaptor.nil()
                    # 133:9: -> ^( DATADEF_SECTION ^( HEADER ASTERISK 'data definitions' ) ^( BODY ( colitem )+ ) )
                    # FMFpython.g:133:12: ^( DATADEF_SECTION ^( HEADER ASTERISK 'data definitions' ) ^( BODY ( colitem )+ ) )
                    root_1 = self.adaptor.nil()
                    root_1 = self.adaptor.becomeRoot(self.adaptor.createFromType(DATADEF_SECTION, "DATADEF_SECTION"), root_1)

                    # FMFpython.g:133:30: ^( HEADER ASTERISK 'data definitions' )
                    root_2 = self.adaptor.nil()
                    root_2 = self.adaptor.becomeRoot(self.adaptor.createFromType(HEADER, "HEADER"), root_2)

                    self.adaptor.addChild(root_2, stream_ASTERISK.next())
                    self.adaptor.addChild(root_2, stream_65.next())

                    self.adaptor.addChild(root_1, root_2)
                    # FMFpython.g:133:68: ^( BODY ( colitem )+ )
                    root_2 = self.adaptor.nil()
                    root_2 = self.adaptor.becomeRoot(self.adaptor.createFromType(BODY, "BODY"), root_2)

                    # FMFpython.g:133:75: ( colitem )+
                    if not (stream_colitem.hasNext()):
                        raise RewriteEarlyExitException()

                    while stream_colitem.hasNext():
                        self.adaptor.addChild(root_2, stream_colitem.next())


                    stream_colitem.reset()

                    self.adaptor.addChild(root_1, root_2)

                    self.adaptor.addChild(root_0, root_1)






                retval.stop = self.input.LT(-1)

                if self.backtracking == 0:

                    retval.tree = self.adaptor.rulePostProcessing(root_0)
                    self.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)

            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return retval

    # $ANTLR end datadefSection

    class dataSection_return(object):
        def __init__(self):
            self.start = None
            self.stop = None

            self.tree = None


    # $ANTLR start dataSection
    # FMFpython.g:135:1: dataSection : LBRACK ASTERISK 'data' RBRACK NEWLINE ( dataitem )* -> ^( DATA_SECTION ^( HEADER ASTERISK 'data' ) ^( BODY ( dataitem )* ) ) ;
    def dataSection(self, ):

        retval = self.dataSection_return()
        retval.start = self.input.LT(1)

        root_0 = None

        LBRACK17 = None
        ASTERISK18 = None
        string_literal19 = None
        RBRACK20 = None
        NEWLINE21 = None
        dataitem22 = None


        LBRACK17_tree = None
        ASTERISK18_tree = None
        string_literal19_tree = None
        RBRACK20_tree = None
        NEWLINE21_tree = None
        stream_RBRACK = RewriteRuleTokenStream(self.adaptor, "token RBRACK")
        stream_66 = RewriteRuleTokenStream(self.adaptor, "token 66")
        stream_LBRACK = RewriteRuleTokenStream(self.adaptor, "token LBRACK")
        stream_NEWLINE = RewriteRuleTokenStream(self.adaptor, "token NEWLINE")
        stream_ASTERISK = RewriteRuleTokenStream(self.adaptor, "token ASTERISK")
        stream_dataitem = RewriteRuleSubtreeStream(self.adaptor, "rule dataitem")
        try:
            try:
                # FMFpython.g:136:9: ( LBRACK ASTERISK 'data' RBRACK NEWLINE ( dataitem )* -> ^( DATA_SECTION ^( HEADER ASTERISK 'data' ) ^( BODY ( dataitem )* ) ) )
                # FMFpython.g:136:11: LBRACK ASTERISK 'data' RBRACK NEWLINE ( dataitem )*
                LBRACK17 = self.input.LT(1)
                self.match(self.input, LBRACK, self.FOLLOW_LBRACK_in_dataSection1428)
                if self.failed:
                    return retval
                if self.backtracking == 0:
                    stream_LBRACK.add(LBRACK17)
                ASTERISK18 = self.input.LT(1)
                self.match(self.input, ASTERISK, self.FOLLOW_ASTERISK_in_dataSection1430)
                if self.failed:
                    return retval
                if self.backtracking == 0:
                    stream_ASTERISK.add(ASTERISK18)
                string_literal19 = self.input.LT(1)
                self.match(self.input, 66, self.FOLLOW_66_in_dataSection1432)
                if self.failed:
                    return retval
                if self.backtracking == 0:
                    stream_66.add(string_literal19)
                RBRACK20 = self.input.LT(1)
                self.match(self.input, RBRACK, self.FOLLOW_RBRACK_in_dataSection1434)
                if self.failed:
                    return retval
                if self.backtracking == 0:
                    stream_RBRACK.add(RBRACK20)
                NEWLINE21 = self.input.LT(1)
                self.match(self.input, NEWLINE, self.FOLLOW_NEWLINE_in_dataSection1436)
                if self.failed:
                    return retval
                if self.backtracking == 0:
                    stream_NEWLINE.add(NEWLINE21)
                # FMFpython.g:136:49: ( dataitem )*
                while True: #loop4
                    alt4 = 2
                    LA4_0 = self.input.LA(1)

                    if (LA4_0 == NPLUS or LA4_0 == NMINUS or (FLOAT <= LA4_0 <= IMAG) or LA4_0 == WORD or LA4_0 == LITERAL) :
                        alt4 = 1


                    if alt4 == 1:
                        # FMFpython.g:136:49: dataitem
                        self.following.append(self.FOLLOW_dataitem_in_dataSection1438)
                        dataitem22 = self.dataitem()
                        self.following.pop()
                        if self.failed:
                            return retval
                        if self.backtracking == 0:
                            stream_dataitem.add(dataitem22.tree)


                    else:
                        break #loop4


                # AST Rewrite
                # elements: 66, ASTERISK, dataitem
                # token labels: 
                # rule labels: retval
                # token list labels: 
                # rule list labels: 
                if self.backtracking == 0:

                    retval.tree = root_0

                    if retval is not None:
                        stream_retval = RewriteRuleSubtreeStream(self.adaptor, "token retval", retval.tree)
                    else:
                        stream_retval = RewriteRuleSubtreeStream(self.adaptor, "token retval", None)


                    root_0 = self.adaptor.nil()
                    # 137:9: -> ^( DATA_SECTION ^( HEADER ASTERISK 'data' ) ^( BODY ( dataitem )* ) )
                    # FMFpython.g:137:12: ^( DATA_SECTION ^( HEADER ASTERISK 'data' ) ^( BODY ( dataitem )* ) )
                    root_1 = self.adaptor.nil()
                    root_1 = self.adaptor.becomeRoot(self.adaptor.createFromType(DATA_SECTION, "DATA_SECTION"), root_1)

                    # FMFpython.g:137:27: ^( HEADER ASTERISK 'data' )
                    root_2 = self.adaptor.nil()
                    root_2 = self.adaptor.becomeRoot(self.adaptor.createFromType(HEADER, "HEADER"), root_2)

                    self.adaptor.addChild(root_2, stream_ASTERISK.next())
                    self.adaptor.addChild(root_2, stream_66.next())

                    self.adaptor.addChild(root_1, root_2)
                    # FMFpython.g:137:53: ^( BODY ( dataitem )* )
                    root_2 = self.adaptor.nil()
                    root_2 = self.adaptor.becomeRoot(self.adaptor.createFromType(BODY, "BODY"), root_2)

                    # FMFpython.g:137:60: ( dataitem )*
                    while stream_dataitem.hasNext():
                        self.adaptor.addChild(root_2, stream_dataitem.next())


                    stream_dataitem.reset();

                    self.adaptor.addChild(root_1, root_2)

                    self.adaptor.addChild(root_0, root_1)






                retval.stop = self.input.LT(-1)

                if self.backtracking == 0:

                    retval.tree = self.adaptor.rulePostProcessing(root_0)
                    self.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)

            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return retval

    # $ANTLR end dataSection

    class commonSection_return(object):
        def __init__(self):
            self.start = None
            self.stop = None

            self.tree = None


    # $ANTLR start commonSection
    # FMFpython.g:139:1: commonSection : LBRACK headername RBRACK NEWLINE ( commonitem )+ -> ^( COMMON_SECTION ^( HEADER headername ) ^( BODY ( commonitem )+ ) ) ;
    def commonSection(self, ):

        retval = self.commonSection_return()
        retval.start = self.input.LT(1)

        root_0 = None

        LBRACK23 = None
        RBRACK25 = None
        NEWLINE26 = None
        headername24 = None

        commonitem27 = None


        LBRACK23_tree = None
        RBRACK25_tree = None
        NEWLINE26_tree = None
        stream_RBRACK = RewriteRuleTokenStream(self.adaptor, "token RBRACK")
        stream_LBRACK = RewriteRuleTokenStream(self.adaptor, "token LBRACK")
        stream_NEWLINE = RewriteRuleTokenStream(self.adaptor, "token NEWLINE")
        stream_headername = RewriteRuleSubtreeStream(self.adaptor, "rule headername")
        stream_commonitem = RewriteRuleSubtreeStream(self.adaptor, "rule commonitem")
        try:
            try:
                # FMFpython.g:140:9: ( LBRACK headername RBRACK NEWLINE ( commonitem )+ -> ^( COMMON_SECTION ^( HEADER headername ) ^( BODY ( commonitem )+ ) ) )
                # FMFpython.g:140:11: LBRACK headername RBRACK NEWLINE ( commonitem )+
                LBRACK23 = self.input.LT(1)
                self.match(self.input, LBRACK, self.FOLLOW_LBRACK_in_commonSection1484)
                if self.failed:
                    return retval
                if self.backtracking == 0:
                    stream_LBRACK.add(LBRACK23)
                self.following.append(self.FOLLOW_headername_in_commonSection1486)
                headername24 = self.headername()
                self.following.pop()
                if self.failed:
                    return retval
                if self.backtracking == 0:
                    stream_headername.add(headername24.tree)
                RBRACK25 = self.input.LT(1)
                self.match(self.input, RBRACK, self.FOLLOW_RBRACK_in_commonSection1488)
                if self.failed:
                    return retval
                if self.backtracking == 0:
                    stream_RBRACK.add(RBRACK25)
                NEWLINE26 = self.input.LT(1)
                self.match(self.input, NEWLINE, self.FOLLOW_NEWLINE_in_commonSection1490)
                if self.failed:
                    return retval
                if self.backtracking == 0:
                    stream_NEWLINE.add(NEWLINE26)
                # FMFpython.g:140:44: ( commonitem )+
                cnt5 = 0
                while True: #loop5
                    alt5 = 2
                    LA5_0 = self.input.LA(1)

                    if ((CONFIG <= LA5_0 <= COMMENT) or (RBRACK <= LA5_0 <= 67)) :
                        alt5 = 1

